compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__exhaustiveness__other_variant_unreachable_when_narrowed2.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
expression: "\npub type Wibble {\n  Wibble\n  Wobble\n  Wubble\n}\n\npub fn main() {\n  let always_wobble = Wobble\n  case always_wobble {\n    Wibble | Wubble -> panic\n    Wobble -> Nil\n  }\n}\n"
---
----- SOURCE CODE

pub type Wibble {
  Wibble
  Wobble
  Wubble
}

pub fn main() {
  let always_wobble = Wobble
  case always_wobble {
    Wibble | Wubble -> panic
    Wobble -> Nil
  }
}


----- WARNING
warning: Unreachable case clause
   ┌─ /src/warning/wrn.gleam:11:5
   │
11 │     Wibble | Wubble -> panic
   │     ^^^^^^^^^^^^^^^^^^^^^^^^

This case clause cannot be reached as it matches on a variant of a type which is never present.

Hint: It can be safely removed.
